--- a/Eimbee.Blazor/wwwroot/example.appsettings.json
+++ b/Eimbee.Blazor/wwwroot/example.appsettings.json
@@ -1,7 +1,6 @@
 {
-  "AzureAdB2C": {
-    "Authority": "{AAD B2C INSTANCE}{DOMAIN}/{SIGN UP OR SIGN IN POLICY}",
-    "ClientId": "{CLIENT ID}",
-    "ValidateAuthority": false
+  "Okta": {
+    "Authority": "https://{yourOktaDomain}/oauth2/default",
+    "ClientId": "{ClientId}"
   }
 }
