--- a/Eimbee.DataAccessLayer/Eimbee.DataAccessLayer.csproj
+++ b/Eimbee.DataAccessLayer/Eimbee.DataAccessLayer.csproj
@@ -6,7 +6,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
-    <PackageReference Include="Z.EntityFramework.Extensions.EFCore" Version="3.0.103" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
+    <PackageReference Include="Z.EntityFramework.Extensions.EFCore" Version="3.0.104" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Eimbee.Core\Eimbee.Core.csproj" />
   </ItemGroup>
 
 </Project>
