--- a/Eimbee.Server/Eimbee.Server.csproj
+++ b/Eimbee.Server/Eimbee.Server.csproj
@@ -7,6 +7,12 @@
   <ItemGroup>
     <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Eimbee.DataAccessLayer\Eimbee.DataAccessLayer.csproj" />
   </ItemGroup>
 
 
